--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -27,14 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="450dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginTop="50dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="35dp"
             android:background="?attr/colorSurface"
-            app:layout_constraintTop_toBottomOf="@id/progressIndicator"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/galleryButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/galleryButton" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/progressIndicator" />
 
         <Button
             android:id="@+id/cameraxButton"
